<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/tweetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tweet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tweetText"
        app:layout_constraintVertical_bias="0.6"/>

    <Button
        android:id="@+id/selectContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/selectContact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/emailViaButton"/>

    <Button
        android:id="@+id/emailViaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/emailTweet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/charCount"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="charCount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tweetText"
        app:layout_constraintRight_toLeftOf="@+id/tweetButton"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintVertical_bias="0.608"/>

    <TextView
        android:id="@+id/tweetDate"
        android:layout_width="304dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/selectContactButton"/>

    <EditText
        android:id="@+id/tweetText"
        android:layout_width="336dp"
        android:layout_height="242dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/tweetHint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/tweetDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>